# cogtome

./: .claude-task.md  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CLAUDE.original.md  Cargo.toml  README.md  README_CN.md  SPEC.md  TODO.md  build.rs  cogtome.toml  justfile  start-webui.sh
.github/workflows/: release.yml  secret-scan.yml
assemblies/daily-summary/: SKILL.md  manifest.json  workflow.json
assemblies/text-processing/: SKILL.md  manifest.json  workflow.json
development/: ARCHITECTURE_DECISIONS.md  COGTOME_Architecture.md  COGTOME_IMAGE_PROMPTS.md  DISCUSSION_SUMMARY.md  IMPLEMENTATION_GUIDE.md  MCP_SERVER_ROADMAP.md  MILOS_COGTOME_INTEGRATION_PLAN.md  OPENCLAW_INTEGRATION.md  OS_METAPHORS.md  PRACTICAL_ISSUES.md  SKILL_AUTHORING_GUIDE.md  TECHNICAL_SPEC.md  WORKFLOW_SIMULATION.md
docs/: CLI_REFERENCE.md  CONTRIBUTING.md  ELT paradigm reflection-engine.md  Kimi.txt  PRODUCT_REFINEMENT_2026-05-05.md  SECURITY.md  THOUGHTS_2026-05-04.md  USER_MANUAL.md
docs/specs/: 2026-04-29-mcp-server-design.md
feedback/: .gitkeep  2026-04-25-architecture-review.md  2026-04-25-daily-use-issues.md
memory/: MEMORY.md
packaging/deb/: build-deb.sh  (+1 more)
scripts/: pre-commit
src/: api.rs  assembly.rs  config.rs  context.rs  discovery.rs  engine.rs  error.rs  main.rs  mcp_server.rs  metrics.rs  pack.rs  python_motif.rs  shutdown.rs  stats.rs  trace_dashboard.rs  validation.rs
test_suite/: COMPREHENSIVE_TESTS.md  README.md
tests/: benchmark.rs
webui/: index.html  package-lock.json  package.json  vite.config.ts
(+143 files in other folders)
