[package]
name = "cogtome"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
jsonschema = "0.26"
toml = "0.8"
futures = "0.3"
uuid = { version = "1.0", features = ["v4"] }
tokio-util = "0.7"

# HTTP API server
axum = "0.7"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Pack/Install
tar = "0.4"
flate2 = "1.0"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.12"
